fixed index filter baroverlapping issue and removed white line on the right side of the page

--- a/src/styles/pages/_index.scss
+++ b/src/styles/pages/_index.scss
@@ -9,7 +9,7 @@
   align-items: center;
   flex-direction: column;
   flex-grow: 1;
-  background: $color-white;
+  background: $map-color;
 
   // font-family: 'Varela Round', sans-serif;
   // font-family: 'Lato', sans-serif;
@@ -35,7 +35,7 @@
       height: 100px;
       // width: 95%;
       // width: 100vw;
-      width: 100%;
+      width: 99.8%;
       // margin: 10px 0 0px 0 ;
       margin: 0;
       border-bottom: 1px solid #bbb;
