--- a/src/styles/structure/_basic-structure.scss
+++ b/src/styles/structure/_basic-structure.scss
@@ -15,7 +15,7 @@ $color-two: #929CAA;
 $color-three: #EDF2F4;
 $color-four: #929CAA;
 $color-five: 1;
-
+$map-color: #333331;
 
 $color-white: #F7F7F7;
 $color-black: #00171F;
